@@ -1,4 +1,4 @@
-build.ver=1.2.5
+build.ver=1.2.6
 build.name=bb-ant-tools
 
 build.jar.file=${build.name}.jar
